--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,29 @@
     font-size: calc(1vw + 0.6em);
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     margin: 0;
-    font-family: sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
+
+@font-face {
+    font-family: "Open Sans";
+    src: url("../fonts/OpenSans-Regular.woff");
+    font-style: normal;
+    font-weight: 400;
+  }
+  
+  @font-face {
+    font-family: "Open Sans";
+    src: url("../fonts/OpenSans-Bold.woff");
+    font-style: normal;
+    font-weight: 700;
+  }
 
 a {
     text-decoration: none;
@@ -14,7 +33,7 @@ a {
 
 /* ******ШАПКА****** */
 
-.header-container {
+.header {
     position: relative;
     background-image: url(../images/img/football_767.jpg);
     background-repeat: no-repeat;
@@ -22,14 +41,20 @@ a {
     background-position: top 0 left 0;
 }
 
-.header-container::before {
+.header::before {
     content: "";
-    background-color: rgba(94, 66, 176,0.7);
+    background-color: rgba(43, 25, 94, 0.8);
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+}
+
+.header-container {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .logo, .hero, .app-buttons {
@@ -48,17 +73,18 @@ a {
 }
 
 .hero {
-    margin-top: 11em;
+    font-size: 1.1em;
+    margin-top: 10em;
     color: #ffffff;
     text-transform: uppercase;
 }
 
 .first-slogan {
-    margin-left: 0.8em;
+    margin-left: 0.5em;
 }
 
 .second-slogan {
-    margin-left: 2.5em;
+    margin-left: 2.3em;
     margin-top: 1em;
 }
 
@@ -68,16 +94,13 @@ a {
 }
 
 .app-buttons {
-    width: 22em;
-    margin-left: auto;
-    margin-right: auto;
     background-color: #5e42b0;
     border-radius: 30px;
  }
 
 .app-button {
     display: flex;
-    width: 11em;
+    width: 9.5em;
     margin-right: auto;
     margin-left: auto;
     align-items: center;
@@ -86,12 +109,12 @@ a {
 .app-button-logo {
     margin-top: 0.9em;
     margin-right: 0.6em;
-    width: 4em;
-    height: 4em;
+    width: 3em;
+    height: 3em;
 }
 
 .app-button-text {
-    font-size: 0.8em;
+    font-size: 0.7em;
     color: #ffffff;
     text-transform: uppercase;
 }
@@ -106,3 +129,59 @@ a {
 
 
 /* ******ШАПКА****** */
+
+/* ******ОСНОВНАЯ ИНФОРМАЦИЯ - АТЛЕТЫ */
+
+.main-container {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.athlets {
+    margin-top: 2em;
+    position: relative;
+    background-image: url(../images/img/footballer_192.png);
+    background-repeat: no-repeat;
+    background-size: 16em;
+    background-position: left 4.2em top 6em;
+}
+
+.title {
+    color: #e7e7e7;
+    text-transform: uppercase;
+    font-size: 3.5em;
+    letter-spacing: 5px;
+}
+
+.info-list {
+    margin-top: 27em;
+}
+
+.info-list-title {
+    display: inline;
+    font-size: 2em;
+    color: #c1c1c1;
+    text-transform: uppercase;
+    margin-left: 1em;
+    letter-spacing: 1.5px;
+}
+
+.info-list-title::before {
+    content: "01";
+    position: absolute;
+    border-bottom: 0.2em solid #5e42b0;
+    font-size: 0.6em;
+    font-weight: 900;
+    color: #000;
+    left: 0;
+    margin-top: 0.2em;
+}
+
+.info-list-text {
+    font-size: 1em;
+    margin-top: 1em;
+    letter-spacing: 1.5px;
+}
+
+/* ******ОСНОВНАЯ ИНФОРМАЦИЯ - АТЛЕТЫ */
