--- a/css/style.css
+++ b/css/style.css
@@ -79,9 +79,6 @@ a {
     text-transform: uppercase;
 }
 
-.first-slogan {
-    margin-left: 0.5em;
-}
 
 .second-slogan {
     margin-left: 2.3em;
@@ -132,34 +129,22 @@ a {
 
 /* ******ОСНОВНАЯ ИНФОРМАЦИЯ - АТЛЕТЫ */
 
-.main-container {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.athlets {
-    margin-top: 2em;
-    position: relative;
-    background-image: url(../images/img/footballer_192.png);
-    background-repeat: no-repeat;
-    background-size: 16em;
-    background-position: left 4.2em top 6em;
-}
-
-.title {
+.athlets-title {
     color: #e7e7e7;
     text-transform: uppercase;
     font-size: 3.5em;
     letter-spacing: 5px;
+    margin-left: 0.5em;
 }
 
-.info-list {
-    margin-top: 27em;
+.footballer {
+    position: absolute;
+    width: 17em;
+    left: 4em;
+    margin-top: 1.5em;
 }
 
 .info-list-title {
-    display: inline;
     font-size: 2em;
     color: #c1c1c1;
     text-transform: uppercase;
@@ -167,20 +152,79 @@ a {
     letter-spacing: 1.5px;
 }
 
-.info-list-title::before {
+.connection-list-info {
+    background-color: #fafafa;
+    margin-top: 21.5em;
+}
+
+.connection-info {
+    padding-top: 6em;
+    padding-bottom: 2em;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.connection::before {
     content: "01";
     position: absolute;
     border-bottom: 0.2em solid #5e42b0;
     font-size: 0.6em;
     font-weight: 900;
     color: #000;
-    left: 0;
+    left: 2em;
+    margin-top: 0.2em;
+}
+
+.collaboration-list-info {
+    background-color: #f5f4f9;
+}
+
+.collaboration-info {
+    padding-top: 2em;
+    padding-bottom: 2em;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.collaboration::before {
+    content: "02";
+    position: absolute;
+    border-bottom: 0.2em solid #5e42b0;
+    font-size: 0.6em;
+    font-weight: 900;
+    color: #000;
+    left: 2em;
+    margin-top: 0.2em;
+}
+
+.growth-list-info {
+    background-color: #5e42b0;
+}
+
+.growth-info {
+    padding-top: 2em;
+    padding-bottom: 2em;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.growth::before {
+    content: "03";
+    position: absolute;
+    border-bottom: 0.2em solid #fff;
+    font-size: 0.6em;
+    font-weight: 900;
+    color: #000;
+    left: 2em;
     margin-top: 0.2em;
 }
 
 .info-list-text {
     font-size: 1em;
-    margin-top: 1em;
+    margin-top: 1.5em;
     letter-spacing: 1.5px;
 }
 
