--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,8 @@ a {
     text-decoration: none;
 }
 
-/* ****** ШАПКА ****** */
+/* ШАПКА */
+
 .header {
     position: relative;
     background-image: url(../images/img/football_767.jpg);
@@ -51,183 +52,202 @@ a {
     bottom: 0;
   }
 
-  .header-container {
-      position: relative;
-      z-index: 1;
-  }
+.header-container {
+    position: relative;
+    z-index: 1;
+}
 
-  .header-container-logo {
-      display: flex;
-      justify-content: center;
-  }
+.header-container-logo {
+    display: flex;
+    justify-content: center;
+}
 
-  .surface-logo {
-      width: 10em;
-      margin-top: 2em;
-  }
+.surface-logo {
+    width: 10em;
+    margin-top: 2em;
+}
 
-  .header-container-info {
-      width: 90%;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 11.5em;
-      color: #ffffff;
-      text-transform: uppercase;
-  }
-
-  .second-slogan {
-      margin-left: 3em;
-      margin-top: 0.5em;
-  }
-
-  .buttons-list {
-      margin-top: 8em;
-  }
-
-  .buttons { 
-      position: relative;
-      padding-bottom: 8em;
-      z-index: 1;
-  }
-
-  .button {
-      width: 90%;
-      background-color: #5e42b0;
-      margin-left: auto;
-      margin-right: auto;
-      border-radius: 30px;
-  }
-
-  .appstore, .googleplay {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 0.5em;
-  }
-
-  .store-logo {
-      width: 2.5em;
-  }
-
-  .button-title {
-      font-size: 0.7em;
-      color: #fff;
-      text-transform: uppercase;
-      margin-left: 0.8em;
-  }
-
-  .button-store-title {
-      font-weight: 900;
-  }
-
-  .googleplay {
-      margin-top: 1em;
-  }
-
-/* ****** ШАПКА ****** */
-
-/* ****** ОСНОВНАЯ ИНФОРМАЦИЯ ****** */
-
-.cards-title {
+.header-container-info {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    font-size: 4em;
-    color: #e7e7e7;
+    margin-top: 11.5em;
+    color: #ffffff;
     text-transform: uppercase;
-    letter-spacing: 2px;
 }
 
-.footballer, .basketballer {
-    width: 100%;
+.second-slogan {
+    margin-left: 3em;
+    margin-top: 0.5em;
+}
+
+.buttons-list {
+    margin-top: 8em;
+}
+
+
+.buttons { 
+    position: relative;
+    padding-bottom: 8em;
+    z-index: 1;
+}
+
+.button {
+    width: 90%;
+    background-color: #5e42b0;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 30px;
+}
+
+.appstore, .googleplay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5em;
+}
+
+.store-logo {
+    width: 2.5em;
+}
+
+.button-title {
+    font-size: 0.7em;
+    color: #fff;
+    text-transform: uppercase;
+    margin-left: 0.8em;
+}
+
+.button-store-title {
+    font-weight: 900;
+}
+
+.googleplay {
+    margin-top: 1em;
+}
+
+/* ШАПКА */
+
+/* ОСНОВНАЯ ИНФОРМАЦИЯ */
+
+.card {
+    position: relative;
+}
+
+.card-title , .card-img, .card-info-title, .card-info-text {
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.athlets-title, .players-title {
+    font-size: 4em;
+    text-transform: uppercase;
+    color: #e7e7e7;
+}
+
+.card-img {
     display: flex;
     position: absolute;
     justify-content: center;
 }
 
 .card-info {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.title {
-    font-size: 2em;
-    text-transform: uppercase;
-    color: #c1c1c1;
-    margin-left: 1em;
-    padding-top: 1em;
-}
-
-.card-text {
-    padding-top: 1em;
-    padding-bottom: 4em;
+    padding-top: 2em;
+    padding-bottom: 3em;
 }
 
 .connection {
+    padding-top: 5em;
     background-color: #fafafa;
-    margin-top: 18em;
-    padding-top: 3em;
-}
-
-.connection .card-info .title::before {
-    content: "01";
-    position: absolute;
-    border-bottom: 5px solid #5e42b0;
-    font-size: 0.6em;
-    font-weight: 900;
-    color: #000;
-    left: 1em;
-    margin-top: 0.2em;
+    margin-top: 17.5em;
 }
 
 .collaboration {
     background-color: #f5f4f9;
 }
 
-.collaboration .card-info .title::before {
-    content: "02";
-    position: absolute;
-    border-bottom: 5px solid #5e42b0;
-    font-size: 0.6em;
-    font-weight: 900;
-    color: #000;
-    left: 1em;
-    margin-top: 0.2em;
-}
-
 .growth {
     background-color: #5e42b0;
+}
+
+.card-info-title {
+    display: flex;
+    align-items: center;
+}
+
+.number {
+    font-size: 0.8em;
+    color: #000;
+    font-weight: 900;
+    border-bottom: 5px solid #5e42b0;
+}
+
+.title {
+    color: #c1c1c1;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    margin-left: 0.3em;
+    letter-spacing: 1px;
+}
+
+.card-info-text {
+    margin-top: 1em;
+}
+
+
+.growth .card-info-title .number {
+    border-bottom: 5px solid #fff;
+}
+
+.growth .card-info-text {
     color: #fff;
 }
 
-.growth .card-info .title::before {
-    content: "03";
-    position: absolute;
-    border-bottom: 5px solid #fff;
-    font-size: 0.6em;
-    font-weight: 900;
-    color: #000;
-    left: 1em;
-    margin-top: 0.2em;
-}
-
-.players-growth {
+.players .growth {
     background-color: #090c35;
 }
 
-.players-growth .card-info .title::before {
-    content: "03";
-    position: absolute;
-    border-bottom: 5px solid #fff;
-    font-size: 0.6em;
-    font-weight: 900;
+.players .growth .card-info-title .number {
     color: #8765dd;
-    left: 1em;
-    margin-top: 0.2em;
+    border-bottom: 5px solid #fff;
 }
 
 
+.action .card-info {
+    padding-top: 0;
+}
+
+.action-img {
+    width: 100%;
+}
+
+.action .card-info {
+    position: relative;
+}
+
+.action .card-info-title {
+    width: fit-content;
+    position: absolute;
+    left: 1.1em;
+    bottom: 15em;
+    padding: 1em 1.5em;
+    background-color: #5e42b0;
+}
+
+.action .card-info-title .number {
+    font-size: 0.8em;
+    color: #f5f6f7;
+    border-bottom: 3px solid #8f7bc8;
+}
+
+.action .title {
+    margin-top: 1em;
+    margin-left: 0.8em;
+}
+
+/* ОСНОВНАЯ ИНФОРМАЦИЯ */
+/* ФУТЕР */
 
 
-/* ****** ОСНОВНАЯ ИНФОРМАЦИЯ ****** */
+/* ФУТЕР */
