--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ a {
     width: fit-content;
     position: absolute;
     left: 1.1rem;
-    bottom: 16.5rem;
+    top: 32.5rem;
     padding: 1rem 1.5rem;
     background-color: #5e42b0;
 }
